--- a/_reference/LUT1D_cco.ipynb
+++ b/_reference/LUT1D_cco.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LUT Operadores de cores simples 1D\n",
+    "# LUT Operadores de cores complexos 1D\n",
     "---"
    ]
   },
