--- a/_reference/LUT3D_identity.ipynb
+++ b/_reference/LUT3D_identity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LUT Identidade 3D\n",
+    "# LUT 3D - Identidade\n",
     "---\n",
     "LUT (ou *Lookup Table*) identidade faz mapeamento de índice, com retorno do mesmo valor de entrada. De forma que:\n",
     "$$\n",
