fix variable names

--- a/_reference/LUT1D_identity.ipynb
+++ b/_reference/LUT1D_identity.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -129,10 +129,10 @@
        }
       },
       "text/html": [
-       "<div id=\"27031f8a-4b79-40b3-b81a-251ea91d0493\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"27031f8a-4b79-40b3-b81a-251ea91d0493\", [{\"type\": \"scatter\", \"marker\": {\"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"symbol\": \"circle\", \"line\": {\"color\": \"rgb(128, 128, 128)\", \"width\": 1}, \"size\": 32}, \"x\": [0.0, 1.0], \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\"], \"y\": [0.0, 1.0], \"line\": {\"dash\": \"line\"}}], {\"margin\": {\"l\": 0, \"r\": 0, \"b\": 0, \"t\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
+       "<div id=\"c5cfe3c4-2fb0-4bab-8c46-bf486ee6182d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c5cfe3c4-2fb0-4bab-8c46-bf486ee6182d\", [{\"line\": {\"dash\": \"line\"}, \"type\": \"scatter\", \"marker\": {\"line\": {\"width\": 1, \"color\": \"rgb(128, 128, 128)\"}, \"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"size\": 32, \"symbol\": \"circle\"}, \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\"], \"y\": [0.0, 1.0], \"x\": [0.0, 1.0]}], {\"margin\": {\"b\": 0, \"t\": 0, \"r\": 0, \"l\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"27031f8a-4b79-40b3-b81a-251ea91d0493\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"27031f8a-4b79-40b3-b81a-251ea91d0493\", [{\"type\": \"scatter\", \"marker\": {\"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"symbol\": \"circle\", \"line\": {\"color\": \"rgb(128, 128, 128)\", \"width\": 1}, \"size\": 32}, \"x\": [0.0, 1.0], \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\"], \"y\": [0.0, 1.0], \"line\": {\"dash\": \"line\"}}], {\"margin\": {\"l\": 0, \"r\": 0, \"b\": 0, \"t\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
+       "<div id=\"c5cfe3c4-2fb0-4bab-8c46-bf486ee6182d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c5cfe3c4-2fb0-4bab-8c46-bf486ee6182d\", [{\"line\": {\"dash\": \"line\"}, \"type\": \"scatter\", \"marker\": {\"line\": {\"width\": 1, \"color\": \"rgb(128, 128, 128)\"}, \"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"size\": 32, \"symbol\": \"circle\"}, \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\"], \"y\": [0.0, 1.0], \"x\": [0.0, 1.0]}], {\"margin\": {\"b\": 0, \"t\": 0, \"r\": 0, \"l\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
       ]
      },
      "metadata": {},
@@ -142,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 7 ms\n"
+      "Wall time: 10 ms\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,10 +261,10 @@
        }
       },
       "text/html": [
-       "<div id=\"cbd54e0e-678b-41c2-952c-151dbdbc0bcc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cbd54e0e-678b-41c2-952c-151dbdbc0bcc\", [{\"type\": \"scatter\", \"marker\": {\"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(85.0, 85.0, 85.0)\", \"rgb(170.0, 170.0, 170.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"symbol\": \"circle\", \"line\": {\"color\": \"rgb(128, 128, 128)\", \"width\": 1}, \"size\": 16}, \"x\": [0.0, 0.3333333333333333, 0.6666666666666666, 1.0], \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\", \"\\u00edndice 2\", \"\\u00edndice 3\"], \"y\": [0.0, 0.3333333333333333, 0.6666666666666666, 1.0], \"line\": {\"dash\": \"line\"}}], {\"margin\": {\"l\": 0, \"r\": 0, \"b\": 0, \"t\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
+       "<div id=\"b7cdc29e-c449-4908-bba7-be84d9a44562\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b7cdc29e-c449-4908-bba7-be84d9a44562\", [{\"line\": {\"dash\": \"line\"}, \"type\": \"scatter\", \"marker\": {\"line\": {\"width\": 1, \"color\": \"rgb(128, 128, 128)\"}, \"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(85.0, 85.0, 85.0)\", \"rgb(170.0, 170.0, 170.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"size\": 16, \"symbol\": \"circle\"}, \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\", \"\\u00edndice 2\", \"\\u00edndice 3\"], \"y\": [0.0, 0.3333333333333333, 0.6666666666666666, 1.0], \"x\": [0.0, 0.3333333333333333, 0.6666666666666666, 1.0]}], {\"margin\": {\"b\": 0, \"t\": 0, \"r\": 0, \"l\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"cbd54e0e-678b-41c2-952c-151dbdbc0bcc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cbd54e0e-678b-41c2-952c-151dbdbc0bcc\", [{\"type\": \"scatter\", \"marker\": {\"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(85.0, 85.0, 85.0)\", \"rgb(170.0, 170.0, 170.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"symbol\": \"circle\", \"line\": {\"color\": \"rgb(128, 128, 128)\", \"width\": 1}, \"size\": 16}, \"x\": [0.0, 0.3333333333333333, 0.6666666666666666, 1.0], \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\", \"\\u00edndice 2\", \"\\u00edndice 3\"], \"y\": [0.0, 0.3333333333333333, 0.6666666666666666, 1.0], \"line\": {\"dash\": \"line\"}}], {\"margin\": {\"l\": 0, \"r\": 0, \"b\": 0, \"t\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
+       "<div id=\"b7cdc29e-c449-4908-bba7-be84d9a44562\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b7cdc29e-c449-4908-bba7-be84d9a44562\", [{\"line\": {\"dash\": \"line\"}, \"type\": \"scatter\", \"marker\": {\"line\": {\"width\": 1, \"color\": \"rgb(128, 128, 128)\"}, \"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(85.0, 85.0, 85.0)\", \"rgb(170.0, 170.0, 170.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"size\": 16, \"symbol\": \"circle\"}, \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\", \"\\u00edndice 2\", \"\\u00edndice 3\"], \"y\": [0.0, 0.3333333333333333, 0.6666666666666666, 1.0], \"x\": [0.0, 0.3333333333333333, 0.6666666666666666, 1.0]}], {\"margin\": {\"b\": 0, \"t\": 0, \"r\": 0, \"l\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
       ]
      },
      "metadata": {},
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 7 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -288,7 +288,7 @@
     "t = np.array(i)/(N - 1)\n",
     "### Visualização\n",
     "cor = ['rgb({0}, {1}, {2})'.format(a*255, b*255, c*255) for a, b, c in zip(t, t, t)]\n",
-    "lut01 = [Scatter(x = t,\n",
+    "lut02 = [Scatter(x = t,\n",
     "                 y = t,\n",
     "                 line = {'dash': 'line'},\n",
     "                 hovertext = indice,\n",
@@ -299,7 +299,7 @@
     "                                     'width': 1}})]\n",
     "\n",
     "layout = Layout(margin = {'l': 0, 'r': 0, 'b': 0, 't':0})\n",
-    "fig = Figure(data = lut01, layout = layout)\n",
+    "fig = Figure(data = lut02, layout = layout)\n",
     "iplot(fig, filename = 'LUT1D_identity{0}'.format(N), show_link = False)"
    ]
   },
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -441,10 +441,10 @@
        }
       },
       "text/html": [
-       "<div id=\"7f64bd01-6fbd-43bd-bebc-bdbd384115b7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7f64bd01-6fbd-43bd-bebc-bdbd384115b7\", [{\"type\": \"scatter\", \"marker\": {\"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(17.0, 17.0, 17.0)\", \"rgb(34.0, 34.0, 34.0)\", \"rgb(51.0, 51.0, 51.0)\", \"rgb(68.0, 68.0, 68.0)\", \"rgb(85.0, 85.0, 85.0)\", \"rgb(102.0, 102.0, 102.0)\", \"rgb(119.0, 119.0, 119.0)\", \"rgb(136.0, 136.0, 136.0)\", \"rgb(153.0, 153.0, 153.0)\", \"rgb(170.0, 170.0, 170.0)\", \"rgb(187.0, 187.0, 187.0)\", \"rgb(204.0, 204.0, 204.0)\", \"rgb(221.0, 221.0, 221.0)\", \"rgb(238.0, 238.0, 238.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"symbol\": \"circle\", \"line\": {\"color\": \"rgb(128, 128, 128)\", \"width\": 1}, \"size\": 8}, \"x\": [0.0, 0.06666666666666667, 0.13333333333333333, 0.2, 0.26666666666666666, 0.3333333333333333, 0.4, 0.4666666666666667, 0.5333333333333333, 0.6, 0.6666666666666666, 0.7333333333333333, 0.8, 0.8666666666666667, 0.9333333333333333, 1.0], \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\", \"\\u00edndice 2\", \"\\u00edndice 3\", \"\\u00edndice 4\", \"\\u00edndice 5\", \"\\u00edndice 6\", \"\\u00edndice 7\", \"\\u00edndice 8\", \"\\u00edndice 9\", \"\\u00edndice 10\", \"\\u00edndice 11\", \"\\u00edndice 12\", \"\\u00edndice 13\", \"\\u00edndice 14\", \"\\u00edndice 15\"], \"y\": [0.0, 0.06666666666666667, 0.13333333333333333, 0.2, 0.26666666666666666, 0.3333333333333333, 0.4, 0.4666666666666667, 0.5333333333333333, 0.6, 0.6666666666666666, 0.7333333333333333, 0.8, 0.8666666666666667, 0.9333333333333333, 1.0], \"line\": {\"dash\": \"line\"}}], {\"margin\": {\"l\": 0, \"r\": 0, \"b\": 0, \"t\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
+       "<div id=\"115ab196-6d55-4178-8183-39598ea54a00\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"115ab196-6d55-4178-8183-39598ea54a00\", [{\"line\": {\"dash\": \"line\"}, \"type\": \"scatter\", \"marker\": {\"line\": {\"width\": 1, \"color\": \"rgb(128, 128, 128)\"}, \"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(17.0, 17.0, 17.0)\", \"rgb(34.0, 34.0, 34.0)\", \"rgb(51.0, 51.0, 51.0)\", \"rgb(68.0, 68.0, 68.0)\", \"rgb(85.0, 85.0, 85.0)\", \"rgb(102.0, 102.0, 102.0)\", \"rgb(119.0, 119.0, 119.0)\", \"rgb(136.0, 136.0, 136.0)\", \"rgb(153.0, 153.0, 153.0)\", \"rgb(170.0, 170.0, 170.0)\", \"rgb(187.0, 187.0, 187.0)\", \"rgb(204.0, 204.0, 204.0)\", \"rgb(221.0, 221.0, 221.0)\", \"rgb(238.0, 238.0, 238.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"size\": 8, \"symbol\": \"circle\"}, \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\", \"\\u00edndice 2\", \"\\u00edndice 3\", \"\\u00edndice 4\", \"\\u00edndice 5\", \"\\u00edndice 6\", \"\\u00edndice 7\", \"\\u00edndice 8\", \"\\u00edndice 9\", \"\\u00edndice 10\", \"\\u00edndice 11\", \"\\u00edndice 12\", \"\\u00edndice 13\", \"\\u00edndice 14\", \"\\u00edndice 15\"], \"y\": [0.0, 0.06666666666666667, 0.13333333333333333, 0.2, 0.26666666666666666, 0.3333333333333333, 0.4, 0.4666666666666667, 0.5333333333333333, 0.6, 0.6666666666666666, 0.7333333333333333, 0.8, 0.8666666666666667, 0.9333333333333333, 1.0], \"x\": [0.0, 0.06666666666666667, 0.13333333333333333, 0.2, 0.26666666666666666, 0.3333333333333333, 0.4, 0.4666666666666667, 0.5333333333333333, 0.6, 0.6666666666666666, 0.7333333333333333, 0.8, 0.8666666666666667, 0.9333333333333333, 1.0]}], {\"margin\": {\"b\": 0, \"t\": 0, \"r\": 0, \"l\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"7f64bd01-6fbd-43bd-bebc-bdbd384115b7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7f64bd01-6fbd-43bd-bebc-bdbd384115b7\", [{\"type\": \"scatter\", \"marker\": {\"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(17.0, 17.0, 17.0)\", \"rgb(34.0, 34.0, 34.0)\", \"rgb(51.0, 51.0, 51.0)\", \"rgb(68.0, 68.0, 68.0)\", \"rgb(85.0, 85.0, 85.0)\", \"rgb(102.0, 102.0, 102.0)\", \"rgb(119.0, 119.0, 119.0)\", \"rgb(136.0, 136.0, 136.0)\", \"rgb(153.0, 153.0, 153.0)\", \"rgb(170.0, 170.0, 170.0)\", \"rgb(187.0, 187.0, 187.0)\", \"rgb(204.0, 204.0, 204.0)\", \"rgb(221.0, 221.0, 221.0)\", \"rgb(238.0, 238.0, 238.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"symbol\": \"circle\", \"line\": {\"color\": \"rgb(128, 128, 128)\", \"width\": 1}, \"size\": 8}, \"x\": [0.0, 0.06666666666666667, 0.13333333333333333, 0.2, 0.26666666666666666, 0.3333333333333333, 0.4, 0.4666666666666667, 0.5333333333333333, 0.6, 0.6666666666666666, 0.7333333333333333, 0.8, 0.8666666666666667, 0.9333333333333333, 1.0], \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\", \"\\u00edndice 2\", \"\\u00edndice 3\", \"\\u00edndice 4\", \"\\u00edndice 5\", \"\\u00edndice 6\", \"\\u00edndice 7\", \"\\u00edndice 8\", \"\\u00edndice 9\", \"\\u00edndice 10\", \"\\u00edndice 11\", \"\\u00edndice 12\", \"\\u00edndice 13\", \"\\u00edndice 14\", \"\\u00edndice 15\"], \"y\": [0.0, 0.06666666666666667, 0.13333333333333333, 0.2, 0.26666666666666666, 0.3333333333333333, 0.4, 0.4666666666666667, 0.5333333333333333, 0.6, 0.6666666666666666, 0.7333333333333333, 0.8, 0.8666666666666667, 0.9333333333333333, 1.0], \"line\": {\"dash\": \"line\"}}], {\"margin\": {\"l\": 0, \"r\": 0, \"b\": 0, \"t\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
+       "<div id=\"115ab196-6d55-4178-8183-39598ea54a00\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"115ab196-6d55-4178-8183-39598ea54a00\", [{\"line\": {\"dash\": \"line\"}, \"type\": \"scatter\", \"marker\": {\"line\": {\"width\": 1, \"color\": \"rgb(128, 128, 128)\"}, \"color\": [\"rgb(0.0, 0.0, 0.0)\", \"rgb(17.0, 17.0, 17.0)\", \"rgb(34.0, 34.0, 34.0)\", \"rgb(51.0, 51.0, 51.0)\", \"rgb(68.0, 68.0, 68.0)\", \"rgb(85.0, 85.0, 85.0)\", \"rgb(102.0, 102.0, 102.0)\", \"rgb(119.0, 119.0, 119.0)\", \"rgb(136.0, 136.0, 136.0)\", \"rgb(153.0, 153.0, 153.0)\", \"rgb(170.0, 170.0, 170.0)\", \"rgb(187.0, 187.0, 187.0)\", \"rgb(204.0, 204.0, 204.0)\", \"rgb(221.0, 221.0, 221.0)\", \"rgb(238.0, 238.0, 238.0)\", \"rgb(255.0, 255.0, 255.0)\"], \"size\": 8, \"symbol\": \"circle\"}, \"hovertext\": [\"\\u00edndice 0\", \"\\u00edndice 1\", \"\\u00edndice 2\", \"\\u00edndice 3\", \"\\u00edndice 4\", \"\\u00edndice 5\", \"\\u00edndice 6\", \"\\u00edndice 7\", \"\\u00edndice 8\", \"\\u00edndice 9\", \"\\u00edndice 10\", \"\\u00edndice 11\", \"\\u00edndice 12\", \"\\u00edndice 13\", \"\\u00edndice 14\", \"\\u00edndice 15\"], \"y\": [0.0, 0.06666666666666667, 0.13333333333333333, 0.2, 0.26666666666666666, 0.3333333333333333, 0.4, 0.4666666666666667, 0.5333333333333333, 0.6, 0.6666666666666666, 0.7333333333333333, 0.8, 0.8666666666666667, 0.9333333333333333, 1.0], \"x\": [0.0, 0.06666666666666667, 0.13333333333333333, 0.2, 0.26666666666666666, 0.3333333333333333, 0.4, 0.4666666666666667, 0.5333333333333333, 0.6, 0.6666666666666666, 0.7333333333333333, 0.8, 0.8666666666666667, 0.9333333333333333, 1.0]}], {\"margin\": {\"b\": 0, \"t\": 0, \"r\": 0, \"l\": 0}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": false})});</script>"
       ]
      },
      "metadata": {},
@@ -454,7 +454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6 ms\n"
+      "Wall time: 10 ms\n"
      ]
     }
    ],
@@ -468,7 +468,7 @@
     "t = np.array(i)/(N - 1)\n",
     "### Visualização\n",
     "cor = ['rgb({0}, {1}, {2})'.format(a*255, b*255, c*255) for a, b, c in zip(t, t, t)]\n",
-    "lut01 = [Scatter(x = t,\n",
+    "lut03 = [Scatter(x = t,\n",
     "                 y = t,\n",
     "                 line = {'dash': 'line'},\n",
     "                 hovertext = indice,\n",
@@ -479,7 +479,7 @@
     "                                     'width': 1}})]\n",
     "\n",
     "layout = Layout(margin = {'l': 0, 'r': 0, 'b': 0, 't':0})\n",
-    "fig = Figure(data = lut01, layout = layout)\n",
+    "fig = Figure(data = lut03, layout = layout)\n",
     "iplot(fig, filename = 'LUT1D_identity{0}'.format(N), show_link = False)"
    ]
   },
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
