add document header

--- a/_examples/LUT1D_cco.ipynb
+++ b/_examples/LUT1D_cco.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# LUT 1D - Operadores complexos de cores\n",
-    "---"
+    "---\n",
+    "por Diego Inácio\n",
+    "- [diegoinacio.com](http://diegoinacio.com)\n",
+    "- [gitHub](https://github.com/diegoinacio)"
    ]
   },
   {
