--- a/_examples/LUT3D_identity.ipynb
+++ b/_examples/LUT3D_identity.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# LUT 3D - Identidade\n",
     "---\n",
+    "por Diego Inácio\n",
+    "- [diegoinacio.com](http://diegoinacio.com)\n",
+    "- [gitHub](https://github.com/diegoinacio)\n",
+    "---\n",
     "LUT (ou *Lookup Table*) identidade faz mapeamento de índice, com retorno do mesmo valor de entrada. De forma que:\n",
     "$$\n",
     "\\large n=N^3\n",
